dialog with close button

--- a/src/app/create-event/create-event.component.scss
+++ b/src/app/create-event/create-event.component.scss
@@ -10,3 +10,14 @@ mat-form-field {
 mat-icon {
     color: grey
 }
+
+.close {
+    color: red !important;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    bottom: 0;
+    height: fit-content;
+    margin: auto;
+}
