--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -1,7 +1,15 @@
-<div class="row mx-auto">
-    <h2 mat-dialog-title>Criar Evento</h2>
-</div>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-actions class="mx-auto">
+    <div class="col"></div>
+
+    <div class="col mx-auto my-auto">
+        <h2 class="text-center" style="margin: unset !important" mat-dialog-title>Criar Evento</h2>
+    </div>
+    
+    <div class="col" style="position: relative;">
+        <mat-icon class="close" (click)="close()">close</mat-icon>
+    </div>
+</mat-dialog-actions>
+<mat-dialog-content class="mat-typography mt-3">
     <form [formGroup]="form" (ngSubmit)="submit()">
         <div class="col">
             <div class="row my-3 mx-auto">
