--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,14 @@
-<div class="row mx-auto">
-    <h2 mat-dialog-title>Login</h2>
-</div>
+<mat-dialog-actions class="mx-auto">
+    <div class="col"></div>
+
+    <div class="col mx-auto my-auto">
+        <h2 class="text-center" style="margin: unset !important" mat-dialog-title>Login</h2>
+    </div>
+    
+    <div class="col" style="position: relative;">
+        <mat-icon class="close" (click)="close()">close</mat-icon>
+    </div>
+</mat-dialog-actions>
 <mat-dialog-content class="mat-typography">
     <form [formGroup]="form" (ngSubmit)="submit()">
         <div class="col">
