--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -16,3 +16,14 @@ span {
 span:hover {
     color: #512DA8;
 }
+
+.close {
+    color: red !important;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    bottom: 0;
+    height: fit-content;
+    margin: auto;
+}
