--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -19,3 +19,15 @@ p {
 h2 {
     margin-bottom: 5px !important;
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+
+.help {
+    transform: scale(0.8);
+}
